--- a/Flask_template/static/css/custom.css
+++ b/Flask_template/static/css/custom.css
@@ -32,6 +32,14 @@
   }
 
 
+  /*  footer */
+.footer-color {
+  background-color: rgb(255, 255, 255);
+}
+
+.reverse-margin {
+  margin-bottom: -10% ;
+}
 
 
 
