--- a/Flask_template/templates/register.html
+++ b/Flask_template/templates/register.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div class="container col-md-6 home shadow rounded p-4 mt-4">
+<div class="container col-md-6 home shadow rounded p-4 mt-4" data-aos="fade-up" style="background-color:white;">
     <div class="container text-center">
         <legend class='border-bottom mb-4 h1'>Register</legend>
     </div>
@@ -62,7 +62,25 @@
         </small>
      </div>
     </div> 
-    
+
+    <div class="py-5">
+      <div class="container">
+          <div class="row align-items-center">
+              <div class="col-md-6 col-sm-6 my-3">
+                  <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="/static/assets/img/logos/avanade.svg" alt="..." /></a>
+              </div>
+              <div class="col-md-6 col-sm-6 my-3">
+                  <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="/static/assets/img/logos/UCL.svg" alt="..." /></a>
+              </div>
+          </div>
+      </div>
+  </div>
+<div class="container-fluid p-5 footer-color">
+  <footer class="container text-center">
+    <p>&copy; 2020-2021 Tennis Sense - UCL - Avanade &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  </footer>
+</div>
+
 
 
 
