--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -44,7 +44,7 @@
 </div>
 
 
-  <div class="container home shadow rounded p-4 mt-4 text-center">
+  <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color: white;">
     <div id="content">
     <div class="containter mb-4">
       <h5>Please upload a video of the desired stroke you wish to analyze</h5>
@@ -84,9 +84,26 @@
       <div id='process' style="display:none" class="container-fluid text-center mt-2">
         <p>Processing data</p>
       </div>
-
   </div>
-
+<br>
+<br>
+  <div class="container-fluid p-4 footer-color">
+    <footer class="container text-center mb-2">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <p>&copy; 2020-2021 Tennis Sense - UCL - Avanade &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        </div>
+        <div class="col-md-3">
+            <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="/static/assets/img/logos/avanade.svg" alt="..." 
+              style="height:50px; width:45%"/></a>
+        </div>
+        <div class="col-md-3">
+            <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="/static/assets/img/logos/UCL.svg" alt="..."  
+              style="height:50px; width:55%"/></a>
+        </div>
+    </div>
+    </footer>
+  </div>
 
 
 {% endblock %}
