more css components

--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -33,7 +33,7 @@
   </nav>
   <!-- end of navbar -->
 
-<div class="container home shadow rounded p-3 mt-4 text-center">
+<div class="container home shadow rounded p-3 mt-4 text-center" style="background-color: white;">
     <div class="container-fluid">
         <div class="container-fluid text-center">
             <legend class='border-bottom h1'>Statistics</legend>
@@ -111,7 +111,7 @@
 </div>
 
 <!-- results and score -->
-<div class="container home shadow rounded p-3 mt-4">
+<div class="container home shadow rounded p-3 mt-4 mb-4" style="background-color: white;">
     <div class="container-fluid">
         <div class="container-fluid text-center">
             <legend class='border-bottom h1'>Results and Recommendations</legend>
@@ -183,6 +183,26 @@
 </div>
 
 </div>
+
+<!-- footer -->
+<div class="container-fluid p-4 footer-color">
+    <footer class="container text-center mb-2">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <p>&copy; 2020-2021 Tennis Sense - UCL - Avanade &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        </div>
+        <div class="col-md-3">
+          <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="/static/assets/img/logos/avanade.svg" alt="..." 
+            style="height:50px; width:45%"/></a>
+      </div>
+      <div class="col-md-3">
+          <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="/static/assets/img/logos/UCL.svg" alt="..."  
+            style="height:50px; width:55%"/></a>
+      </div>
+    </div>
+    </footer>
+  </div>
+
 <!-- Modal for angle -->
 <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
