--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -34,17 +34,18 @@
 
 
   <!-- start of content that hides on click -->
-  <div class="container-fluid">
-    <br>
-    <div class="container-fluid text-center">
-      <div class="containter">
-        <legend class='border-bottom h1'>Stroke Analysis</legend>
-      </div>
-      </div>
-</div>
+
 
 
   <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color: white;">
+    <div class="container-fluid mb-4">
+      <br>
+      <div class="container-fluid text-center">
+        <div class="containter">
+          <legend class='border-bottom h1'>Stroke Analysis</legend>
+        </div>
+        </div>
+  </div>
     <div id="content">
     <div class="containter mb-4">
       <h5>Please upload a video of the desired stroke you wish to analyze</h5>
