--- a/Flask_template/templates/index.html
+++ b/Flask_template/templates/index.html
@@ -22,7 +22,7 @@
   <body style='background: linear-gradient(45deg, rgba(211,195,246,1) 0%, rgba(212,253,254,1) 39%, rgba(173,208,240,1) 65%, rgba(246,219,246,1) 100%);'>
 
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
         <a class="navbar-brand" href="#">Carousel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -109,20 +109,24 @@
         <div class="row" data-aos="fade-down">
           
           <div class="col-lg-6 text-center">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-chart-pie fa-stack-1x fa-inverse"></i>
-          </span>
-            <h2>Stroke Statistics</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <div class="container p-3 rounded shadow footer-color">
+              <span class="fa-stack fa-4x">
+                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                <i class="fas fa-chart-pie fa-stack-1x fa-inverse"></i>
+            </span>
+              <h2>Stroke Statistics</h2>
+              <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            </div>
           </div><!-- /.col-lg-6 -->
           <div class="col-lg-6 text-center">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-walking fa-stack-1x fa-inverse"></i>
-          </span>
-            <h2>Stroke Recommendations</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <div class="container p-3 rounded shadow footer-color">
+              <span class="fa-stack fa-4x">
+                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                <i class="fas fa-walking fa-stack-1x fa-inverse"></i>
+            </span>
+              <h2>Stroke Recommendations</h2>
+              <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            </div>
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
 
@@ -131,7 +135,7 @@
 
         <hr class="featurette-divider">
 
-        <div class="row featurette" data-aos="fade-right">
+        <div class="row featurette p-2 rounded shadow footer-color" data-aos="fade-right">
           <div class="col-md-7">
             <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
@@ -143,7 +147,7 @@
 
         <hr class="featurette-divider">
 
-        <div class="row featurette" data-aos="fade-left">
+        <div class="row featurette p-2 rounded shadow footer-color" data-aos="fade-left">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
@@ -155,7 +159,7 @@
 
         <hr class="featurette-divider">
 
-        <div class="row featurette" data-aos="fade-right">
+        <div class="row featurette p-2 rounded shadow footer-color" data-aos="fade-right">
           <div class="col-md-7">
             <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
