--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
     <a class="navbar-brand" href="#" style="margin-left: 2%;">Tennis Sense</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,13 +12,10 @@
           <a class="nav-link" href="{{ url_for('home') }}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link 2</a>
+          <a class="nav-link" href="{{url_for('stroke')}}">Link 2</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('point')}}">Link 3</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="{{url_for('stroke')}}">Link 4</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
@@ -33,7 +30,7 @@
   </nav>
   <!-- end of navbar -->
 
-<div class="container home shadow rounded p-3 mt-4 text-center" style="background-color: white;">
+<div class="container home shadow rounded p-3 mt-4 text-center footer-color" data-aos="fade-up">
     <div class="container-fluid">
         <div class="container-fluid text-center">
             <legend class='border-bottom h1'>Statistics</legend>
@@ -111,7 +108,7 @@
 </div>
 
 <!-- results and score -->
-<div class="container home shadow rounded p-3 mt-4 mb-4" style="background-color: white;">
+<div class="container home shadow rounded p-3 mt-4 mb-4 footer-color"data-aos="fade-up">
     <div class="container-fluid">
         <div class="container-fluid text-center">
             <legend class='border-bottom h1'>Results and Recommendations</legend>
