--- a/Flask_template/templates/layout.html
+++ b/Flask_template/templates/layout.html
@@ -29,8 +29,7 @@
         <title></title>
 
     </head>
-  <body style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(45deg, rgba(211,195,246,1) 0%, rgba(212,253,254,1) 39%, rgba(173,208,240,1) 65%, rgba(246,219,246,1) 100%);
-  ">
+  <body style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-image: linear-gradient( 65.9deg,  rgba(85,228,224,1) 5.5%, rgba(75,68,224,0.74) 54.2%, rgba(64,198,238,1) 55.2%, rgba(177,36,224,1) 98.4% );">
     
           {% block body %}
 
