--- a/Flask_template/templates/index.html
+++ b/Flask_template/templates/index.html
@@ -19,7 +19,7 @@
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
 
   </head>
-  <body style='background: linear-gradient(45deg, rgba(211,195,246,1) 0%, rgba(212,253,254,1) 39%, rgba(173,208,240,1) 65%, rgba(246,219,246,1) 100%);'>
+  <body style='background-image: linear-gradient( 65.9deg,  rgba(85,228,224,1) 5.5%, rgba(75,68,224,0.74) 54.2%, rgba(64,198,238,1) 55.2%, rgba(177,36,224,1) 98.4% );'>
 
     <header>
       <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
