--- a/Flask_template/templates/login.html
+++ b/Flask_template/templates/login.html
@@ -35,6 +35,11 @@
            Forgot Password?<a href="url_for('home')"> Click here to reset password</a>
         </small>
      </div>
+     <div class='container text-center'>
+      <small class='text-muted'>
+         Don't have an account?<a href="{{ url_for('register') }}"> Register here</a>
+      </small>
+   </div>
     </div>
 
     <div class="py-5">
