--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -79,10 +79,11 @@
         </p>
       </div>
       <!-- Loading bar -->
-      <div class='container-fluid text-center mt-5' id="loading" style="display:none"></div>
-      <div id='process' style="display:none" class="container-fluid text-center mt-2">
+      <div id='process' style="display:none" class="container-fluid text-center mb-1">
         <p>Processing data</p>
       </div>
+      <div class='container-fluid text-center' id="loading" style="display:none"></div>
+
   </div>
 <br>
 <br>
