--- a/Flask_template/templates/index.html
+++ b/Flask_template/templates/index.html
@@ -22,7 +22,7 @@
   <body style='background-image: linear-gradient( 65.9deg,  rgba(85,228,224,1) 5.5%, rgba(75,68,224,0.74) 54.2%, rgba(64,198,238,1) 55.2%, rgba(177,36,224,1) 98.4% );'>
 
     <header>
-      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-transparent">
         <a class="navbar-brand" href="#">Carousel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -30,23 +30,23 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#">Disabled</a>
             </li>
           </ul>
           <form class="form-inline mt-2 mt-md-0">
-            <a class="btn btn-secondary btn-l text-uppercase" type="button" href="{{url_for('login')}}">Login</a>
+            <a class="btn btn-secondary btn-l text-uppercase" type="button" href="{{url_for('login')}}" target="_blank">Login</a>
           </form>
         </div>
       </nav>
     </header>
 
-    <main role="main">
+    <main role="main" style="margin-top: -10%;">
 
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -61,7 +61,7 @@
               <div class="carousel-caption text-left">
                 <h1>Tennis Sense</h1>
                 <p>AI-Powered Tennis Analytics</p>
-                <p><a class="btn btn-primary btn-xl text-uppercase" href="{{ url_for('register') }}">Register</a>
+                <p><a class="btn btn-primary btn-xl text-uppercase" href="{{ url_for('register') }}" target="_blank">Register</a>
                 </p>
               </div>
             </div>
@@ -69,7 +69,7 @@
           <div class="carousel-item">
             <img class="second-slide" src="/static/assets/img/carousel2.jpg" alt="Second slide">
             <div class="container">
-              <div class="carousel-caption">
+              <div class="carousel-caption text-left">
                 <h1>Another example headline.</h1>
                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
@@ -77,9 +77,9 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+            <img class="third-slide" src="/static/assets/img/carousel3.jpg" alt="Third slide">
             <div class="container">
-              <div class="carousel-caption text-right">
+              <div class="carousel-caption text-left">
                 <h1>One more for good measure.</h1>
                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
