--- a/Flask_template/templates/home.html
+++ b/Flask_template/templates/home.html
@@ -15,7 +15,7 @@
         <a class="nav-link" href="{{ url_for('stroke') }}">Analysis</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">History</a>
+        <a class="nav-link" href="{{url_for('history')}}">History</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
@@ -120,7 +120,7 @@
 </div> 
 
 <br>
-
+<!-- Footer -->
 <div class="container-fluid p-4 footer-color">
   <footer class="container text-center mb-2">
     <div class="row align-items-center">
