--- a/Flask_template/templates/index.html
+++ b/Flask_template/templates/index.html
@@ -19,7 +19,8 @@
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
 
   </head>
-  <body style='background-image: linear-gradient( 65.9deg,  rgba(85,228,224,1) 5.5%, rgba(75,68,224,0.74) 54.2%, rgba(64,198,238,1) 55.2%, rgba(177,36,224,1) 98.4% );'>
+  <body style='background: rgb(247,229,127);
+  background: linear-gradient(45deg, rgba(247,229,127,1) 0%, rgba(129,224,249,1) 50%, rgba(252,176,69,1) 100%);'>
 
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-transparent">
