--- a/Flask_template/templates/register.html
+++ b/Flask_template/templates/register.html
@@ -75,6 +75,8 @@
           </div>
       </div>
   </div>
+
+<!-- Footer -->
 <div class="container-fluid p-5 footer-color">
   <footer class="container text-center">
     <p>&copy; 2020-2021 Tennis Sense - UCL - Avanade &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
