--- a/Flask_template/templates/layout.html
+++ b/Flask_template/templates/layout.html
@@ -29,7 +29,8 @@
         <title></title>
 
     </head>
-  <body style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-image: linear-gradient( 65.9deg,  rgba(85,228,224,1) 5.5%, rgba(75,68,224,0.74) 54.2%, rgba(64,198,238,1) 55.2%, rgba(177,36,224,1) 98.4% );">
+  <body style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: rgb(247,229,127);
+  background: linear-gradient(45deg, rgba(247,229,127,1) 0%, rgba(129,224,249,1) 50%, rgba(252,176,69,1) 100%);">
     
           {% block body %}
 
