--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('point')}}">History</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('gallery')}}">Gallery</a>
+          </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
