--- a/Flask_template/templates/history.html
+++ b/Flask_template/templates/history.html
@@ -18,7 +18,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="{{url_for('history')}}">History</a>
         </li>
-        
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('gallery')}}">Gallery</a>
+          </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
