--- a/Flask_template/templates/register.html
+++ b/Flask_template/templates/register.html
@@ -52,7 +52,7 @@
         </div>
         <br>
         <div class="container d-flex justify-content-center">
-            {{form.submit(class="btn btn-primary btn-l")}}
+            {{form.submit(class="btn btn-primary btn-l rounded")}}
         </div>
       </form>
       <br>
