--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -70,7 +70,7 @@
             <label for="exampleFormControlFile1">Example file input</label>
             <input class='form-control' type="file" class="form-control-file" id="exampleFormControlFile1">
           </div>
-          <button type="submit" class="btn btn-primary" id="stroke_submit" onclick="loading();">Submit</button>
+          <button type="submit" class="btn btn-primary btn-rounded pl-4 pr-4" id="stroke_submit" onclick="loading();" style="border-radius: 20px;">Submit</button>
         </form>
         <br>
         <p class='text-center' style="color: red;">*Please do not refresh page when results are generated. Doing so will duplicate your results.<br>
