--- a/Flask_template/templates/login.html
+++ b/Flask_template/templates/login.html
@@ -26,7 +26,7 @@
         </div>
         <br>
         <div class="container d-flex justify-content-center">
-            {{form.submit(class="btn btn-primary btn-l")}}
+            {{form.submit(class="btn btn-primary btn-l rounded")}}
         </div>
       </form>
       <br>
