adding different recommendations options randomized

--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -111,7 +111,7 @@
 </div>
 
 <!-- results and score -->
-<div class="container home shadow rounded p-3 mt-4 mb-4 footer-color"data-aos="fade-up">
+<div class="container home shadow rounded p-3 mt-4 mb-4 footer-color" data-aos="fade-up" id='content'>
     <div class="container-fluid">
         <div class="container-fluid text-center">
             <legend class='border-bottom h1'>Results and Recommendations</legend>
